<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#91EA95"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pressure_indicators"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pressureUp"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pressureDown"
        android:inputType="number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pulse"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tahicardia"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="252dp" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="304dp"
        android:layout_height="296dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="#89C0EC"
        android:text="@string/save"
        android:textAlignment="center"
        android:textStyle="bold" />
</LinearLayout>
