<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#91EA95"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="416dp"
        android:layout_height="67dp"
        android:padding="20dp"
        android:text="@string/otherData"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number|numberDecimal"
        android:padding="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/numberOfSteps"
        android:inputType="number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="345dp"
        android:layout_marginBottom="30dp"
        android:background="#89C0EC"
        android:text="@string/save"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>
